02/24/2005
----------
1. French language, template and htmlarea files translation minor update
   (thanks to Dominique, dominique.fournier.AT.grenoble.cnrs.fr)
2. fix a bug that saprefs always set headerattr to ALL when ruletype is header
   (reported by Yang Yao-Strong, ysyang.AT.green-computing.com)
3. Slovenian language and template files translation minor update
   add Slovenian letters to spellcheck
   (thanks to Uros Sajko, copatek.AT.yahoo.com)
4. support attachment deletion in readmessage


02/23/2005
----------
1. Spanish language and template files trnslation minor update
   (thanks to Javier Smaldone, javier.AT.diff.com.ar)
2. Catalan language and template files translation minor update
   (thanks to Jordi Sanfeliu, mikaku.AT.fiwix.org)
3. Romanian (ro & ro.utf8) lang and template files translation minor update
   (thanks to Gabriel Hojda, gabriel.hojda.AT.gmail.com)
4. clear stale /tmp/.ow.xxx files in login routine


02/21/2005
----------
1. remove unnecessary file permission.template from english template


02/20/2005
----------
1. add "Read message with message charset" to user preference
   (suggested by chuavv, chuavv.AT.mail.savs.hcc.edu.tw)


02/19/2005
----------
1. add chmod support in webdisk


02/18/2005
----------
1. fix a bug in openwebmail-saprefs.pl which always deleted the testrule
   prevous to the one user want to remove.
   (reported by Dominic Lu, dominic.AT.dominic.idv.tw)
2. fix some mismatch string between en and ro* language/template files.
   (reported by Gabriel Hojda, gabriel.hojda.AT.gmail.com)
3. new iconset: Cool3D.Danish
   (thanks to Gunner Poulsen, gp.AT.lyngbjerggaardskolen.dk)
4. Romanian (ro & ro.utf8) lang and template files translation minor update
   (thanks to Gabriel Hojda, gabriel.hojda.AT.gmail.com)
5. add the folder dropdown menu to readmessage
   add new option login_fieldwidth to openwebmail.conf
   (suggested by Gabriel Hojda, gabriel.hojda.AT.gmail.com)


02/17/2005
----------