@@ -17,7 +17,7 @@
 
 name			Open WebMail
 version			2.50
-releasedate		20050224
+releasedate		20050225
 
 ##############################################################################
 # host dependent configuration
