@@ -65,7 +65,7 @@ use vars qw(%lang_text %lang_err);	# defined in lang/xy
 
 use vars qw(%action_redirect @actions);
 %action_redirect= (
-   listmessages            => [1, 'enable_webmail',     'openwebmail-main.pl',    ['folder']],
+   listmessages_afterlogin => [1, 'enable_webmail',     'openwebmail-main.pl',    ['folder']],
    calmonth                => [2, 'enable_calendar',    'openwebmail-cal.pl',     ['year', 'month']],
    showdir                 => [3, 'enable_webdisk',     'openwebmail-webdisk.pl', ['currentdir']],
    addrlistview            => [4, 'enable_addressbook', 'openwebmail-abook.pl',   ['abookfolder']],
@@ -74,7 +74,6 @@ use vars qw(%action_redirect @actions);
    calday                  => [7, 'enable_calendar',    'openwebmail-cal.pl',     ['year', 'month', 'day']],
    readmessage             => [8, 'enable_webmail',     'openwebmail-read.pl',    ['folder', 'message_id']],
    composemessage          => [9, 'enable_webmail',     'openwebmail-send.pl',    ['to', 'cc', 'bcc', 'subject']],
-   listmessages_afterlogin => [10, 'enable_webmail',     'openwebmail-main.pl',    ['folder']],
 );
 @actions = sort { ${$action_redirect{$a}}[0] <=> ${$action_redirect{$b}}[0] } keys (%action_redirect);
 
@@ -177,8 +176,8 @@ sub loginmenu {
 
    # remember params for redirection after login
    my $action=param('action');
+   $action='listmessages_afterlogin' if ($action eq 'listmessages');
    if (defined $action_redirect{$action}) {
-      $action='listmessages_afterlogin' if ($action eq 'listmessages');
       $temphtml .= ow::tool::hiddens(action=>$action);
       foreach my $name (@{${$action_redirect{$action}}[3]}) {
          $temphtml .= ow::tool::hiddens($name=>param($name));
@@ -732,6 +731,7 @@ sub autologin {
 ########## REFRESHURL_AFTER_LOGIN ################################
 sub refreshurl_after_login {
    my $action=$_[0];
+   $action='listmessages_afterlogin' if ($action eq 'listmessages');
 
    my $validaction;
    foreach (@actions) {
